src/objects/JIRA_CustomFieldValue_prod__c.object
<CustomObject>
    <description>CustomFieldValue object from JIRA; synced daily via IOD -- filtered for specific fields only</description>
    <fields>
        <fullName>CustomField_ID__c</fullName>
        <label>CustomField ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateValue__c</fullName>
        <label>DateValue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_ID__c</fullName>
        <label>Issue ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberValue__c</fullName>
        <label>NumberValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StringValue__c</fullName>
        <label>StringValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_ID__c</fullName>
        <description>Unique JIRA table field, used for upsert functionality</description>
        <externalId>true</externalId>
        <label>Table ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TextValue__c</fullName>
        <label>TextValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JIRA_CustomFieldValue_prod</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CustomField_ID__c</columns>
        <columns>Issue_ID__c</columns>
        <columns>StringValue__c</columns>
        <columns>Table_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_ID__c</field>
            <operation>equals</operation>
            <value>2109639</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JCFV-{0000000}</displayFormat>
        <label>JIRA_CustomFieldValue_prod Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JIRA_CustomFieldValue_prods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>